Continuing with cyber security

--- a/Talk7/02_background/02-1_cybersecurity.tex
+++ b/Talk7/02_background/02-1_cybersecurity.tex
@@ -1,44 +1,59 @@
 \subsection{Cybersecurity}
 \label{subsec:02_cybersecurity}
 
-\subsubsection{Definition}
+Cybersecurity has the potential to be one of the most global interests for governmental or private institutions, as well as for individuals. Governmental, financial, corporate, military and medical organizations collect an enormous amount of data on computers and other devices. All those organizations need to make sure that no unauthorized individuals or organizations can access, modify or remove this sensitive information. When the media publishes that an unauthorized person has attacked a company, they suddenly loose reputation by their customers, which probably leads to losing many customers. All in all, the business result of an attacked institution decreases very largely, such that an investment in cybersecurity is significant.
 
-When introducing the term cybersecurity in a first step, we need to focus on security in general. Security is hard to define as no universally agreed definition exists. A possible definition of security may be the state in which there is no relevant threat or security breach. As it is not possible to enumerate all possible threats or to verify their nonexistence, security cannot be measured in a meaningful way. Security, in general, is very individual depending on the person and her willingness to take risks, which can be perceived differently by other people. All in all, security refers to protection against \textbf{intended} incidents and attacks \cite{Bishop2004, Pfleeger2014}.
+\subsubsection{CIA Triangle}
+Data, software, and hardware all over the world need to be protected in such a way that confidentiality, integrity, and availability could be guaranteed \cite{Pfleeger2014}. Those three security objectives are considered the most important components of security and are modeled into the rear triangle, also called the CIA-triangle. By combining these three aspects, a computer will become valuable for a user. However, there are three possible ways to harm this value by breaching one of the following components, as seen in \cite{Bishop2004}.
+\begin{itemize}
+    \item \textbf{Confidentiality:} As the use of computers in sensitive fields such as industry, military or government has grown, keeping information secrets has become major importance. All this data, such as students grades, medical records and many more are sensitive information which needs to be carefully controlled. Ensuring confidentiality is a problematic operation throughout all computer systems. There has to be always an authorized officer to distribute those authorization rights and allow individuals to access data within a company or institution.
+      \subitem Definition: Authorized users can only \textbf{view} assets. E.g., a thief gains access to users data.
+    \item \textbf{Integrity:} The trustworthiness of resources or data and the prevention of unauthorized or unwanted changes is the base of this component. It usually includes data integrity (the information' content) and origin integrity (source of data). Mechanisms of integrity may be either prevented or detected. A prevention mechanism blocks any unauthorized try to modify data. Detection mechanisms on the other side do not even try to prevent violations of integrity. They report that the underlying integrity is no longer guaranteed. As the source and the trust of data usually relies on assumptions, evaluating the integrity of data is often difficult.
+        \subitem Definition: An asset is \textbf{modified} only by authorized users. E.g., a thief gains access to data and modifies its content.
+    \item \textbf{Availability:} When desired, a user may use a resource or information at any time. An unavailable system is as useful as having no such system. By guaranteeing a running system, those resources may be utilized to generate revenue for a company or to gain information out of data. Denial of services attacks (DoS) are efforts to block the availability of a system and are difficult to detect because unusual access patterns have to be detected. Those types of attacks will be described in section \ref{subsec:03_ddos}.
+      \subitem:  Definition: Any authorized party may \textbf{use} an asset. E.g., a thief steals a computer, and the user has no longer access.
+\end{itemize}
+
+Access control is a paradigm of computer security to implement a policy which controls accesses by users to protected objects \cite{Pfleeger2014}.
+% TODO more access control
+
+
+\subsubsection{Attack possibilites}
+The main goal of computer security is to protect valuable assets, such as hardware, software, and data. A threat is a potential violation of having security within a system.
+
+
+\subsubsection{Terminology}
+In most literature, the terms cybersecurity and information security are used interchangeably \cite{VonSolms2013}.
+
+Security is hard to define as no universally agreed definition exists. A possible definition of security may be the state in which there is no relevant threat or security breach. As it is not possible to enumerate all possible threats or to verify their nonexistence, security cannot be measured in a meaningful way. Security, in general, is very individual depending on the person and her willingness to take risks, which can be perceived differently by other people. All in all, security refers to protection against \textbf{intended} incidents and attacks \cite{Bishop2004, Pfleeger2014}.
 
 Additionally, security has to be disassociated from the term safety, where the latter refers to \textbf{unintended} incidents and attacks \cite{Bishop2004}.
 
-\subsubsection{CIA Triangle}
-Generally, the security objectives consist of the following triangle, also called the C-I-A-triangle, as stated in \cite{Bishop2004}. Combining these three aspects a computer will become valuable for a user. However, there are three possible ways to harm this value.
-\begin{itemize}
-    \item Confidentiality: As the use of computers in sensitive fields such as industry, military or government has grown, keeping information secrets has become major importance. Also, assets can only be viewed by authorized users. E.g., a thief gains access to users data.
-    \item Integrity: An asset is modified only by authorized users. E.g., a thief gains access to data and modifies its content.
-    \item Availability: Any authorized party may use an asset. E.g., a thief steals a computer, and the user has no longer access.
-\end{itemize}
 
 \subsubsection{Cyber Security history}
+The terminology of "Computer Security", "Information Security" and "IT Security" have been used interchangeably over many years. Going with time, the term "Cyber Security" became more popular, when the former US President Barack Obama proclaimed in 2009, as stated in \cite{TheWhiteHouse2009}, "I call upon the people of the United States to recognize the importance of cybersecurity and to observe this month with appropriate activities, events, and training to enhance our national security and resilience".
 
-\subsubsection{Information security vs. cybersecurity}
-
-
-\subsection{Attack possibilites}
-
-
-
-
-
-
+\begin{figure}[ht]
+  \begin{center}
+  \includegraphics[scale=0.4]{Talk7/img/google_trends}
+  \end{center}
+  \caption{Google Trends for security term between 2006 - 2019}
+  \label{label}
+\end{figure}
 
 
 
 
 
-\textbf{Length: 2-3 pages}
-\begin{itemize}
-  \item Definition of Cybersecurity (\cite{Bishop2003} and \cite{Bishop2004})
-  \item Description of the history of cyber security (\cite{Hansen2016} and \cite{Bishop2004})
-  \item Information security vs. Cyber security (\cite{VonSolms2013})
-  \item Authentication and Authorization (\cite{Bishop2004} and \cite{Pfleeger2014})
-  \item Cryptography? (\cite{Bishop2004} and \cite{Pfleeger2014})
-  \item Cost-Benefit Analysis, Risk Analysis (\cite{Bishop2004})
-  \item Attack possibilities (Worms, Viruses, Trojan Horses, Bugs, Botnets) (\cite{Bishop2004} and \cite{Pfleeger2014})
-\end{itemize}
+
+
+%\textbf{Length: 2-3 pages}
+%\begin{itemize}
+%  \item Definition of Cybersecurity (\cite{Bishop2003} and \cite{Bishop2004})
+%  \item Description of the history of cyber security (\cite{Hansen2016} and \cite{Bishop2004})
+%  \item Information security vs. Cyber security (\cite{VonSolms2013})
+%  \item Authentication and Authorization (\cite{Bishop2004} and \cite{Pfleeger2014})
+%  \item Cryptography? (\cite{Bishop2004} and \cite{Pfleeger2014})
+%  \item Cost-Benefit Analysis, Risk Analysis (\cite{Bishop2004})
+%  \item Attack possibilities (Worms, Viruses, Trojan Horses, Bugs, Botnets) (\cite{Bishop2004} and \cite{Pfleeger2014})
+%\end{itemize}
