--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -1,20 +1,29 @@
 \subsection{Distributed Denial of Service (DDoS)}
 \label{subsec:03_ddos}
 
-\textbf{Length: 3-4 pages}
+% TODO What is DDoS? (\cite{Bishop2004})
+% TODO Differences DoS and DDoS
 
-\begin{itemize}
-  \item What is DDoS? (\cite{Bishop2004})
-  \begin{itemize}
-    \item Differences DoS and DDoS
-  \end{itemize}
-  \item General Introduction about possibility of DDoS attacks (\cite{Bishop2004})
-  \item Mitigation Possibilities
-  \begin{itemize}
-    \item DDos Mitigation with Smart Contracts (\cite{Rodrigues2017})
-    \item Mitigation-as-a-service in cooperative network defenses (\cite{Mannhart2018})
-    \item Blockchain Signaling System (BloSS) (\cite{Rodrigues2019})
-    \item Multi domain DDoS Mitgiation based on blockchains (\cite{Rodrigues2017a})
-  \end{itemize}
-  \item Use Case Gladius
-\end{itemize}
+\subsubsection{Mitigation Possibilities}
+% TODO generalize possibilities
+
+% TODO probably explain Gladius?
+
+\paragraph{DDos Mitigation with Smart Contracts}
+\cite{Rodrigues2017}
+
+\paragraph{Mitigation-as-a-service in cooperative network defenses}
+\cite{Mannhart2018}
+
+\paragraph{Blockchain Signaling System (BloSS)}
+\cite{Rodrigues2019}
+
+\paragraph{Multi domain DDoS Mitgiation based on blockchains}
+\cite{Rodrigues2017a}
+
+
+
+
+
+
+\textbf{Length: 3-4 pages}
