--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -1,8 +1,24 @@
 \subsection{Distributed Denial of Service (DDoS)}
 \label{subsec:03_ddos}
 
-% TODO What is DDoS? (\cite{Bishop2004})
-% TODO Differences DoS and DDoS
+% Introduction describing the base of such attacks
+A DDoS (Distributed Denial of Service) attack has become a popular way to cripple a server of an institution or a private person and exposed to be an immense threat to the Internet. However, how is it possible for attackers to execute such attacks? The current internet design has its purpose of moving packets from a source to a known destination. The network itself minimally forwards all packages at minimal cost and generally outsources the complexity, including security, transport reliability and quality of service to the sender and receiver of the package. This concept has been called the end-to-end paradigm. As no intermediary entity will step in, a party (either sender or receiver) can damage its opposition by using different attack possibilities such as IP Spoofing or the aforementioned DDoS attack \cite{Mirkovic2004}. By faking the source address in the header of a packet, the sender can hide its identity. This security issue is called IP Spoofing \cite{Cloudflare2019}. As described in \citet{Mirkovic2004} following security issues raise opportunities of attacks:
+\begin{itemize}
+    \item Limited internet resources: Every host or services has hardware limitations that users may consume.
+    \item Highly interdependent internet security: No matter how secure a host may be configured, DDoS attacks always depend on the security of others within the Internet.
+    \item No collocation of intelligence and resources: The intermediate network has plentiful resources, as they forward package at minimal costs.  In contrast, the end networks only invest in as much bandwidth as they planned to use for their services.
+    \item No enforcement of accountability: As described above, attackers can escape from accountability by using IP Spoofing mechanisms.
+    \item Distribution of control: In a world of a distributed network, such as the Internet, multiple networks participate in that network. Each one of them has different security mechanisms. No global control entity can define a security policy or standard.
+\end{itemize}
+
+% Explaining DDoS
+By deploying multiple attacking entities, attackers using DDoS try to overflood a service and prevent others the use of that service. More precisely, they send a stream of packets to the victims, which consume the hardware resources and therefore make it unavailable for legitimate clients to access the service. Another popular way for an attacker is to send malformed packets to shut down the availability of the service. Those packets confuse the web application or some protocols on the victims' hardware and force the server to reboot. There are probably some additional possibilities to shut down services on the internet. Such attack possibilities will be discovered first when they have been exploited in a significant attack. The procedure of a DDoS attack is split into the following phases: An attacker recruits multiple agents (clients) into which the attacker injects malicious code. Attackers often hide the identity of infected clients by using IP Spoofing mechanisms \cite{Mirkovic2004}.
+
+% TODO Difference DoS and DDoS?
+
+% TODO Motivation behind DDoS
+Multiple incentives exist to attack clients using DDoS attacks. Unfortunately, the main goal of such an attack is to damage the selected victim. The motives may be found in prestige (gaining respect within the hacker community when attacking popular websites), personal reasons, material gain meaning to attack competitors or political reasons \cite{Mirkovic2004}.
+
 
 \subsubsection{Mitigation Possibilities}
 % TODO generalize possibilities
@@ -20,10 +36,3 @@
 
 \paragraph{Multi domain DDoS Mitgiation based on blockchains}
 \cite{Rodrigues2017a}
-
-
-
-
-
-
-\textbf{Length: 3-4 pages}
