--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -1,8 +1,10 @@
 \chapter{Investigating the Blockchain Technology
 in the Context of Cybersecurity}
-\markboth{Title of My Seminar Work}{}
+\markboth{Investigating the Blockchain Technology
+in the Context of Cybersecurity}{}
 \chaptauthors{Lenz, Roland, Pascal, Silas}
 
+% TODO
 \Kurzfassung{%
 This is the abstract.
 It fits pretty much on one page and is definitely not longer.}
