--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -49,6 +49,17 @@ url = {https://www.cloudflare.com/learning/ddos/glossary/ip-spoofing/},
 urldate = {2019-03-29},
 year = {2019}
 }
+@article{Pras2016,
+abstract = {Denial of service (DoS) attacks continue to threaten the reliability of networking systems. Previous approaches for protecting networks from DoS attacks are reactive in that they wait for an attack to be launched before taking appropriate measures to protect the network. This leaves the door open for other attacks that use more sophisticated methods to mask their traffic.We propose an architecture called Secure Overlay Services (SOS) that proactively prevents DoS attacks, geared toward supporting Emergency Services or similar types of communication. The architecture is constructed using a combination of secure overlay tunneling, routing via consistent hashing, and filtering. We reduce the probability of successful attacks by (i) performing intensive filtering near protected network edges, pushing the attack point perimeter into the core of the network, where high-speed routers can handle the volume of attack traffic, and (ii) introducing randomness and anonymity into the architecture, making it difficult for an attacker to target nodes along the path to a specific SOS-protected destination.Using simple analytical models, we evaluate the likelihood that an attacker can successfully launch a DoS attack against an SOS-protected network. Our analysis demonstrates that such an architecture reduces the likelihood of a successful attack to minuscule levels.},
+author = {Pras, Aiko and van Rijswijk-Deij, Roland and Jonker, Mattijs and Sperotto, Anna and Sadre, Ramin},
+doi = {10.1145/2987443.2987487},
+file = {:Users/pascalzehnder/Dropbox/UZH/19{\_}FS/Comsys/DDoS/Pras et al. - 2016 - Measuring the Adoption of DDoS Protection Services.pdf:pdf},
+isbn = {978-1-4503-4526-2},
+keywords = {active dns measurements,cloud-based security,ddos attack mitigation,networks,protection,protection services},
+pages = {279--285},
+title = {{Measuring the Adoption of DDoS Protection Services}},
+year = {2016}
+}
 @article{Kim2018,
 abstract = {Excavations at Liang Bua, a large limestone cave on the island of Flores in eastern Indonesia, have yielded evidence for a popu- lation of tiny hominins, sufficiently distinct anatomically to be assigned to a new species, Homo floresiensis1 . The finds comprise the cranial and some post-cranial remains of one individual, as well as a premolar from another individual in older deposits. Here we describe their context, implications and the remaining archaeological uncertainties. Dating by radiocarbon (14C), lumi- nescence, uranium-series and electron spin resonance (ESR) methods indicates that H. floresiensis existed from before 38,000 years ago (kyr) until at least 18 kyr. Associated deposits contain stone artefacts and animal remains, including Komodo dragon and an endemic, dwarfed species of Stegodon. H. floresiensis originated from an early dispersal of Homo erectus (including specimens referred to as Homo ergaster and Homo georgicus)1 that reached Flores, and then survived on this island refuge until relatively recently. It overlapped significantly in time with Homo sapiens in the region2,3 , but we do not know if or how the two species interacted.},
 author = {Kim, Hyun Woo and Jeong, Young Sik},
